--- a/login.ipynb
+++ b/login.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled4.ipynb",
+      "name": "login.ipynb",
       "provenance": [],
       "include_colab_link": true
     },
@@ -26,13 +26,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "psOQlu_R6Koa",
+        "id": "2cdo8ZA8XTFh",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# Import requests (Python HTTP library)\n",
-        "import requests"
+        "\n",
+        "import requests\n",
+        "from bs4 import BeautifulSoup as bs    "
       ],
       "execution_count": 0,
       "outputs": []
@@ -40,12 +41,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "w3dI45Ps76v9",
+        "id": "Zfn8w_STXuXu",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "from lxml import html"
+        "def get_login_token(raw_resp):\n",
+        "    soup = bs(raw_resp.text, 'lxml')\n",
+        "    token = [n.get('value', '') for n in soup.find_all('input')\n",
+        "             if n.get('name', '') == 'wpLoginToken']\n",
+        "    return token[0]"
       ],
       "execution_count": 0,
       "outputs": []
@@ -53,13 +58,22 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nGVxo-C46axh",
+        "id": "aqiGhUbcXwy7",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# Try opening this webpage in your browser\n",
-        "url = 'https://auth.yell.com/sso/login'"
+        "payload = {\n",
+        "    'wpName': 'JaneDoe63244',\n",
+        "    'wpPassword': 'at?c4a#$8_cALYT',\n",
+        "    'wploginattempt': 'Log in',\n",
+        "    'wpEditToken': \"+\\\\\",\n",
+        "    'title': \"Special:UserLogin\",\n",
+        "    'authAction': \"login\",\n",
+        "    'force': \"\",\n",
+        "    'wpForceHttps': \"1\",\n",
+        "    'wpFromhttp': \"1\",\n",
+        "  }"
       ],
       "execution_count": 0,
       "outputs": []
@@ -67,27 +81,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dSGOuzxl6R10",
+        "id": "ENtuVFSOX30S",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# Some webpages will reject reaquests unless it looks like a real person\n",
-        "user_agent = \"Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:44.0) Gecko/20100101 Firefox/44.0\"\n",
-        "headers = {\"User-Agent\": user_agent, \"Host\": \"auth.yell.com\", \"Origin\": \"https://auth.yell.com\"}"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ydtuoWSX7N-q",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# Set up a session (will store cookies etc)\n",
         "s = requests.Session()"
       ],
       "execution_count": 0,
@@ -96,12 +94,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4SOFUD3W7oqO",
+        "id": "IFf4_FcXX7Fh",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "response = s.get(url)"
+        "resp = s.get('https://en.wikipedia.org/w/index.php?title=Special:UserLogin')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -109,65 +107,53 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_ErNnHKB8Fvv",
+        "id": "SAAQByf2X-q6",
         "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "login_html = html.fromstring(response.text)\n",
-        "hidden_inputs = login_html.xpath(r'//form[@id=\"credential\"]//input[@type=\"hidden\"]')\n",
-        "data = {x.attrib[\"name\"]: x.attrib[\"value\"] for x in hidden_inputs}"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "XhtVtPAH7gTe",
-        "colab_type": "code",
+        "outputId": "36737460-69a8-4d5a-9303-3324ee9b9caf",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 102
-        },
-        "outputId": "992757fa-045b-4775-cafc-c962ff9ca937"
+          "height": 187
+        }
       },
       "source": [
-        "# Login fields - needs investigation to set correct fields\n",
-        "data[\"username\"] = \"janedoe63244@gmail.com\"\n",
-        "data[\"password\"] = \"at?c4a#$8_cALYT\"\n",
-        "data"
+        "payload['wpLoginToken'] = get_login_token(resp)\n",
+        "payload"
       ],
-      "execution_count": 72,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "{'_eventId_submit': 'true',\n",
-              " 'execution': 'e1s1',\n",
-              " 'lt': 'LT-323740-7eBY9d3k7zowiWXWkCy130eZKlppT2-sso.yell.com',\n",
-              " 'password': 'at?c4a#$8_cALYT',\n",
-              " 'username': 'janedoe63244@gmail.com'}"
+              "{'authAction': 'login',\n",
+              " 'force': '',\n",
+              " 'title': 'Special:UserLogin',\n",
+              " 'wpEditToken': '+\\\\',\n",
+              " 'wpForceHttps': '1',\n",
+              " 'wpFromhttp': '1',\n",
+              " 'wpLoginToken': '2c74f560215d02ce6cce005145ab03e05ddd895b+\\\\',\n",
+              " 'wpName': 'JaneDoe63244',\n",
+              " 'wpPassword': 'at?c4a#$8_cALYT',\n",
+              " 'wploginattempt': 'Log in'}"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 72
+          "execution_count": 13
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xMbkNJxX7O7q",
+        "id": "cdZg6QpXYA2w",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# Make HTTP POST request\n",
-        "response = s.post(url=url, headers=headers, data=data) "
+        "response_post = s.post('https://en.wikipedia.org/w/index.php?title=Special:UserLogin&action=submitlogin&type=login',\n",
+        "                           data=payload)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -175,13 +161,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qwqcWDZA9aXq",
+        "id": "MsihHiMgYDGy",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "url = \"https://www.yell.com/reviews/my\"\n",
-        "response = s.get(url)"
+        "response = s.get('https://en.wikipedia.org/wiki/Special:Watchlist')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -189,45 +174,67 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VLdl5t5m-FT3",
+        "id": "8mJ-cQUWYVMq",
         "colab_type": "code",
+        "outputId": "a324a94e-6918-4dc3-aaf1-2d4473cdee38",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 255
-        },
-        "outputId": "200deb4e-ee14-41f3-9cf4-a8a85b62efca"
+          "height": 34
+        }
       },
       "source": [
-        "print(response.text)"
+        "response.url"
       ],
-      "execution_count": 75,
+      "execution_count": 0,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "<html>\r\n",
-            "<head><title>404 Not Found</title></head>\r\n",
-            "<body bgcolor=\"white\">\r\n",
-            "<center><h1>404 Not Found</h1></center>\r\n",
-            "<hr><center>nginx</center>\r\n",
-            "</body>\r\n",
-            "</html>\r\n",
-            "<!-- a padding to disable MSIE and Chrome friendly error page -->\r\n",
-            "<!-- a padding to disable MSIE and Chrome friendly error page -->\r\n",
-            "<!-- a padding to disable MSIE and Chrome friendly error page -->\r\n",
-            "<!-- a padding to disable MSIE and Chrome friendly error page -->\r\n",
-            "<!-- a padding to disable MSIE and Chrome friendly error page -->\r\n",
-            "<!-- a padding to disable MSIE and Chrome friendly error page -->\r\n",
-            "\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'https://en.wikipedia.org/wiki/Special:Watchlist'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xmGuBG7c-06Z",
+        "id": "eaoxX6QwYbyq",
+        "colab_type": "code",
+        "outputId": "16bd923e-d10e-4385-a460-e7dda67cb786",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "'JaneDoe63244' in response.text"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "T5IR9fR0YwQd",
         "colab_type": "code",
         "colab": {}
       },
