--- a/login.ipynb
+++ b/login.ipynb
@@ -31,9 +31,38 @@
         "colab": {}
       },
       "source": [
-        "\n",
+        "# Import modules\n",
         "import requests\n",
         "from bs4 import BeautifulSoup as bs    "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MpllRYUwaDz_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Wikipedia user login page (try going here in your browser)\n",
+        "LOGIN_URL = 'https://en.wikipedia.org/w/index.php?title=Special:UserLogin'"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4FYfeN4sZwbb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Login credentials\n",
+        "USERNAME = 'JaneDoe63244'\n",
+        "PASSWORD = 'at?c4a#$8_cALYT'"
       ],
       "execution_count": 0,
       "outputs": []
@@ -46,6 +75,7 @@
         "colab": {}
       },
       "source": [
+        "# Function to obtain login token\n",
         "def get_login_token(raw_resp):\n",
         "    soup = bs(raw_resp.text, 'lxml')\n",
         "    token = [n.get('value', '') for n in soup.find_all('input')\n",
@@ -63,9 +93,10 @@
         "colab": {}
       },
       "source": [
+        "# Login payload data\n",
         "payload = {\n",
-        "    'wpName': 'JaneDoe63244',\n",
-        "    'wpPassword': 'at?c4a#$8_cALYT',\n",
+        "    'wpName': USERNAME,\n",
+        "    'wpPassword': PASSWORD,\n",
         "    'wploginattempt': 'Log in',\n",
         "    'wpEditToken': \"+\\\\\",\n",
         "    'title': \"Special:UserLogin\",\n",
@@ -73,7 +104,7 @@
         "    'force': \"\",\n",
         "    'wpForceHttps': \"1\",\n",
         "    'wpFromhttp': \"1\",\n",
-        "  }"
+        "}"
       ],
       "execution_count": 0,
       "outputs": []
@@ -86,6 +117,7 @@
         "colab": {}
       },
       "source": [
+        "# Create session (will store cookies)\n",
         "s = requests.Session()"
       ],
       "execution_count": 0,
@@ -99,7 +131,8 @@
         "colab": {}
       },
       "source": [
-        "resp = s.get('https://en.wikipedia.org/w/index.php?title=Special:UserLogin')"
+        "# Get login page\n",
+        "resp = s.get(LOGIN_URL)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -109,17 +142,18 @@
       "metadata": {
         "id": "SAAQByf2X-q6",
         "colab_type": "code",
-        "outputId": "36737460-69a8-4d5a-9303-3324ee9b9caf",
+        "outputId": "3842928b-648e-43b1-ba60-d898945feb58",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
         }
       },
       "source": [
+        "# Extract login token from page\n",
         "payload['wpLoginToken'] = get_login_token(resp)\n",
         "payload"
       ],
-      "execution_count": 0,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -131,7 +165,7 @@
               " 'wpEditToken': '+\\\\',\n",
               " 'wpForceHttps': '1',\n",
               " 'wpFromhttp': '1',\n",
-              " 'wpLoginToken': '2c74f560215d02ce6cce005145ab03e05ddd895b+\\\\',\n",
+              " 'wpLoginToken': 'ac150e2228e95df87a1313557b4067835ddd8c1c+\\\\',\n",
               " 'wpName': 'JaneDoe63244',\n",
               " 'wpPassword': 'at?c4a#$8_cALYT',\n",
               " 'wploginattempt': 'Log in'}"
@@ -140,7 +174,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 28
         }
       ]
     },
@@ -152,8 +186,9 @@
         "colab": {}
       },
       "source": [
-        "response_post = s.post('https://en.wikipedia.org/w/index.php?title=Special:UserLogin&action=submitlogin&type=login',\n",
-        "                           data=payload)"
+        "# Perform HTTP POST to login with payload\n",
+        "FORM_URL = 'https://en.wikipedia.org/w/index.php?title=Special:UserLogin&action=submitlogin&type=login'\n",
+        "response_post = s.post(FORM_URL, data=payload)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -166,6 +201,7 @@
         "colab": {}
       },
       "source": [
+        "# Now we are logged in, get user watchlist\n",
         "response = s.get('https://en.wikipedia.org/wiki/Special:Watchlist')"
       ],
       "execution_count": 0,
@@ -176,7 +212,7 @@
       "metadata": {
         "id": "8mJ-cQUWYVMq",
         "colab_type": "code",
-        "outputId": "a324a94e-6918-4dc3-aaf1-2d4473cdee38",
+        "outputId": "baecc59c-3e87-4b50-cb92-040df0ea915c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -185,7 +221,7 @@
       "source": [
         "response.url"
       ],
-      "execution_count": 0,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -197,7 +233,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 31
         }
       ]
     },
@@ -206,7 +242,7 @@
       "metadata": {
         "id": "eaoxX6QwYbyq",
         "colab_type": "code",
-        "outputId": "16bd923e-d10e-4385-a460-e7dda67cb786",
+        "outputId": "f6106e1c-06dc-409b-e120-2352903ab4c9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -215,7 +251,7 @@
       "source": [
         "'JaneDoe63244' in response.text"
       ],
-      "execution_count": 0,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -227,7 +263,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 32
         }
       ]
     },
