--- a/login.ipynb
+++ b/login.ipynb
@@ -212,46 +212,18 @@
       "metadata": {
         "id": "8mJ-cQUWYVMq",
         "colab_type": "code",
-        "outputId": "baecc59c-3e87-4b50-cb92-040df0ea915c",
+        "outputId": "a0a4a715-00c1-4cd3-fe53-2c1e91677847",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
       "source": [
-        "response.url"
-      ],
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'https://en.wikipedia.org/wiki/Special:Watchlist'"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 31
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "eaoxX6QwYbyq",
-        "colab_type": "code",
-        "outputId": "f6106e1c-06dc-409b-e120-2352903ab4c9",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
+        "# Check that you are really logged in\n",
+        "response.url\n",
         "'JaneDoe63244' in response.text"
       ],
-      "execution_count": 32,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -263,22 +235,9 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 33
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "T5IR9fR0YwQd",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
